Fixed cards on mobile

--- a/styles/base.css
+++ b/styles/base.css
@@ -74,10 +74,10 @@ p.small {
 }
 
 .card {
-	background-color: transparent;
 	border-radius: var(--border-radius);
-	backdrop-filter: blur(11px) brightness(12) opacity(0.3);
-	-webkit-backdrop-filter: blur(11px) brightness(12) opacity(0.3);
+	background-color: rgba(255, 255, 255, 0.4);
+	backdrop-filter: blur(15px);
+	-webkit-backdrop-filter: blur(15px);
 	padding: 14px 20px;
 }
 
